# git_copyright

./: .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
src/: cli.rs  config.rs  default_config.toml  error.rs  file_ops.rs  git_ops.rs  lib.rs  main.rs  regex_ops.rs  runner.rs
