[package]
description = "Add/update copyright notes based on git history"
version = "0.3.0"
edition = "2024"
license-file = "LICENSE-APACHE"
name = "git_copyright"
readme = "README.md"
repository = "https://github.com/sgasse/git_copyright"

[lib]
name = "git_copyright"
path = "src/lib.rs"

[[bin]]
name = "git_copyright"
path = "src/main.rs"

[dependencies]
argh = "0.1.13"
chrono = "0.4.43"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
glob = "0.3.3"
log = "0.4.29"
num_cpus = "1.17.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9.11"
